[package]
name = "anyversion"
version = "0.2.0"
edition = "2018"
authors = ["Koto Furumiya <kotofurumiya@gmail.com>"]
repository = "https://github.com/kotofurumiya/anyversion"
keywords = ["version", "utility", "cli"]
license = "MIT"
readme = "README.md"
description = "An utility command to just show a version of arbitrary command."

[dependencies]
